--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -7,7 +7,7 @@
 4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.?.?*
 
 |[[latest_issue]]0.8.2
-|Workshop Sep 25-28. Added new type `RESOURCE_PARTICIPATION`. +
+|{openehr_jira}/SPECPROC-1[SPECPROC-1]Workshop Sep 25-28. Significant rework to model. +
  Move to new PROC openEHR component.
 |B Fabjan, +
  B Lah, +
