--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,4 @@
-= specifications-PROC
-openEHR Process Model Specifications
+= specifications-PROC - openEHR Process Model Specifications
 
-This repository contains the document and model sources (Asciidoctor and MagicDraw) for the openEHR Reference Model specifications.
+This repository contains the document and model sources (Asciidoctor and MagicDraw) for the openEHR Process specifications. The published form may be accessed from the openEHR website http://www.openehr.org/releases/PROC/latest/docs/index[PROC specifications index page].
 
-== Available Specifications
-
-Core Specifications
-
-* Task Planning Model - https://rawgit.com/openEHR/specifications-PROC/master/docs/task_planning/task_planning.html[HTML]
