--- a/docs/UML/classes/task_group.adoc
+++ b/docs/UML/classes/task_group.adoc
@@ -21,7 +21,7 @@ h|*Attributes*
 
 h|*0..1*
 |*members*: `List<PLAN_ITEM>`
-a|Set of Tasks to perform. Sequencing is either the natural order of the tasks list, or may be controlled by
+a|Set of Tasks to perform. Execution order is defined by the `_execution_type_` setting, either sequential or parallel (no order).
 
 h|*0..1*
 |*execution_type*: `EXECUTION_TYPE`
