--- a/docs/UML/classes/timing_spec.adoc
+++ b/docs/UML/classes/timing_spec.adoc
@@ -3,10 +3,15 @@
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*_TIMING_SPEC (abstract)_*
+2+^h|*TIMING_SPEC*
 
 h|*Description*
-2+a|Parent of classes representing ways to specify time of an action to be performed.
+2+a|Object representing time of an action to be performed in terms of a related event.
+
+* clock time: event = `TIMER_EXPIRY`
+* event-linked: event = `CALENDAR_EVENT` or `MANUAL_EVENT`, e.g. evening meal, washing, etc;
+* task-linked: event = `TASK_TRANSITION`, e.g. 1hr after previous Task done;
+* state-linked: event = `STATE_TRIGGER`
 
 [.tbd]
 TODO: probably need an option for coded times like 'afternoon', 'midday' etc.
@@ -16,7 +21,7 @@ TODO: probably need an option for coded times like 'afternoon', 'midday' etc.
 ISSUE-generic-planned_time: These classes should probably be made generic and added to the BASE component. Needs to take into account some of the other models of time specification. See e.g. openEHR-EHR-CLUSTER.timing_daily.v0.0.1 for other design concepts.
 
 h|*Inherit*
-2+|`TASK_PRECONDITION`
+2+|`WAIT_CONDITION`
 
 h|*Attributes*
 ^h|*Signature*
@@ -25,4 +30,16 @@ h|*Attributes*
 h|*0..1*
 |*start_window*: `TASK_TIMER`
 a|Time window after an initial time during which the action should start. Allows for approximate times to be used operationally.
+
+h|*1..1*
+|*event*: `EVENT_WAIT`
+a|Event that defines the intended point in time.
+
+h|*0..1*
+|*other_details*: `ITEM_STRUCTURE`
+a|
+
+h|*1..1*
+|*event_relation*: `TEMPORAL_RELATION`
+a|Temporal relation to the event of the point or period in time being defined by this Timing Spec.
 |===
