--- a/docs/UML/classes/wait_condition.adoc
+++ b/docs/UML/classes/wait_condition.adoc
@@ -1,11 +1,14 @@
-=== TASK_PRECONDITION Class
+=== WAIT_CONDITION Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*_TASK_PRECONDITION (abstract)_*
+2+^h|*_WAIT_CONDITION (abstract)_*
 
 h|*Description*
 2+a|Preconditions on a Task being executed, such as events, state (of something in the environment), or timing. Task Precondition is a way of generalising the various kinds of condition that if satisfied, allow a Task or Task Group to become available for execution by the performer.
+
+h|*Inherit*
+2+|`LOCATABLE`
 
 |===
