--- a/docs/UML/classes/context_variable.adoc
+++ b/docs/UML/classes/context_variable.adoc
@@ -21,7 +21,7 @@ a|Name of variable, as used in precondition and decision expressions.
 
 h|*1..1*
 |*type*: `EXPR_TYPE_DEF`
-a|
+a|Type of this variable.
 
 h|*0..1*
 |*populating_request*: `SYSTEM_CALL`
