--- a/docs/UML/classes/callback_notification.adoc
+++ b/docs/UML/classes/callback_notification.adoc
@@ -1,9 +1,9 @@
-=== CALLBACK_EVENT Class
+=== CALLBACK_NOTIFICATION Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*CALLBACK_EVENT*
+2+^h|*CALLBACK_NOTIFICATION*
 
 h|*Description*
 2+a|Event generated on receipt of notification of completion of a Dispatchable Task.
@@ -11,4 +11,11 @@ h|*Description*
 h|*Inherit*
 2+|`NON_DETERMINISTIC_EVENT`
 
+h|*Attributes*
+^h|*Signature*
+^h|*Meaning*
+
+h|*1..1*
+|*task_id*: `UID_BASED_ID`
+a|Identifier of originating Task.
 |===
