--- a/docs/UML/classes/condition_branch.adoc
+++ b/docs/UML/classes/condition_branch.adoc
@@ -18,4 +18,7 @@ h|*Attributes*
 h|*1..1*
 |*test*: `BOOLEAN_CONTEXT_EXPRESSION`
 a|Boolean-valued test expression which if True indicates that this Branch is to be followed during execution.
+
+h|*Invariants*
+2+a|*_Inv_no_wait_condition_*: `wait_spec = Void`
 |===
