--- a/docs/UML/classes/event_action.adoc
+++ b/docs/UML/classes/event_action.adoc
@@ -6,17 +6,11 @@ h|*Class*
 2+^h|*EVENT_ACTION*
 
 h|*Description*
-2+a|
+2+a|Action(s) to perform on receipt of an event with a particular status.
 
 h|*Attributes*
 ^h|*Signature*
 ^h|*Meaning*
-
-h|*1..1*
-|*resume_type*: `RESUME_TYPE`
-a|Procedure to execute when completion notification received, for example, to display a form, notify performer etc.
-
-TODO: determine details.
 
 h|*0..1*
 |*system_call*: `List<SYSTEM_CALL>`
@@ -27,8 +21,6 @@ h|*0..1*
 a|Optional message to display to original Task context (i.e. application, form etc) if timer expires.
 
 h|*0..1*
-|*resume_location*: `UID_BASED_ID`
-a|Reference to a resume Task in the current Plan, at which to restart when the request / handoff has completed.
-
-If not set, the following Task is assumed. It set, is typically an earlier Task, in situations where the current Task(s) are no longer needed once the external action has been completed.
+|*timer*: `TASK_TIMER`
+a|A new Timer to be started as an Event receipt action.
 |===
