--- a/docs/UML/classes/task_transition.adoc
+++ b/docs/UML/classes/task_transition.adoc
@@ -6,7 +6,7 @@ h|*Class*
 2+^h|*TASK_TRANSITION*
 
 h|*Description*
-2+a|Event wait type for Task transitions, specified in terms of target state reached by the identified Task. Example: Task 123 `completed`.
+2+a|Event wait type for Task transitions, specified in terms of target state reached by the associated Task. Example: Task `completed`.
 
 TODO: may need specify the specific transitions rather than target states.
 
@@ -19,7 +19,7 @@ h|*Attributes*
 
 h|*1..1*
 |*task_id*: `UID_BASED_ID`
-a|Identifier of Task.
+a|Identifier of Task with which this event is associated.
 
 h|*1..1*
 |*transition*: `TASK_LIFECYCLE`
