--- a/docs/task_planning/master07-model_definition.adoc
+++ b/docs/task_planning/master07-model_definition.adoc
@@ -10,20 +10,27 @@ image::{uml_export_dir}/diagrams/PROC-task_planning.definition-structure.svg[id=
 
 The remaining classes are shown in various specialised views below.
 
-The top-level structure for defining plans is a `WORK_PLAN`, which includes one or more related `TASK_PLANs` making up a logical goal-oriented plan. Inclusion is achieved via UID references to Task Plans (`WORK_PLAN._plans_`), not physical containment. This relationship allows related Task Plans to be grouped, which occurs for two reasons described earlier: re-use of Task Plans as _sub-plans_ of other Task Plans, and team-based Plans, featuring _hand-offs_. How the Task Plans are linked to create these structures is enabled by particular sub-types of `TASK`, which may be understood by considering the model view above.
+The top-level structure for defining plans is a `WORK_PLAN`, which includes one or more related `TASK_PLANs` making up a logical goal-oriented plan. Inclusion is achieved via UID references to Task Plans (`WORK_PLAN._plans_`), not physical containment. This relationship allows related Task Plans to be grouped, which occurs for two reasons described earlier: re-use of Task Plans as _sub-plans_ of other Task Plans, and team-based Plans, featuring _hand-offs_ between Task Plans.
+
+A Work Plan has a number of global attributes, as follows:
+
+* `_context_`: a data context for the Plan as a whole, which enables external variables (such as patient data items) to be tracked and updated;
+* `_calendar_`: a global calendar for the Plan, into which entries may be added representing fixed events such as appointments, holidays etc;
+* `_timeline_`: the global timeline for the Plan (and hence the subject) into which planned Tasks are fixed, with times specified as offsets from the zero point;
+* `_timers_`: a reference list of all Timers in use in the Plan;
+* `_listeners_`: a reference list of all Event listeners defined in the Plan.
+
+The details of all these structures are described in various sections below.
 
 As can be seen, the `_definition_` of a `TASK_PLAN` is a `TASK_GROUP`, which has as its `_members_` any number of `PLAN_ITEMs`, which resolve to either `TASK_GROUP` (and some specialisations described below), or `TASK`.
 
-`PLAN_ITEM` has a mandatory `_description_` attribute, which represents a natural language specification of the work of the Task. It also has two optional attributes that control the generic behaviour of Tasks and Groups: `_precondition_` and `_repeat_spec_`. The first enables a gate condition to be applied to a Task or Group, as described in the section <<task_preconditions_concept>>. It is assumed that the state ('if'), event ('if-and-when') and timing ('when') conditions are mutually exclusive possibilities, i.e. that a Task defined with an Event precondition cannot also have a state precondition.
-
-[.tbd]
-TBD: this might change in the future.
+`PLAN_ITEM` has a mandatory `_description_` attribute, which represents a natural language specification of the work of the Task. It also has two optional attributes that control the generic behaviour of Tasks and Groups: `_wait_spec_` and `_repeat_spec_`. The first enables a wait state (described above in the section <<wait_condition,Wait Conditions>>) to be applied to a Task or Group, which is triggered by time-related Events (clock time, reaching a point in a calendar) or other kinds of Events (external notifications etc). This allows the timing of a Task to be specified.
 
 The second attribute, `_repeat_spec_`, enables a Task or Group to be marked as repeating. This is not primarily intended to replace the use of individual Task instances over time, such as repeated medication administrations, but rather to be used to indicate if larger sections (typicaly a Group) of planned Tasks are repeatable. Where repeats are specified, they will be unrolled into literal copies in the materialised expression of the Plan.
 
 === Task Group Structure
 
-The set of Tasks in Task Plan is represented within a containment structure created using instances of the `TASK_GROUP` type, which has three key attributes. Execution of a Group is controlled by the `_execution_type_` and `_execution_rules_` attributes, which express sequential or parallel processing, and optionally other execution rules. It also has a `_training_level_` attribute which enables different visbility of Sub-Plans to users with different experience levels. This is described more fully below.
+The set of Tasks in a Task Plan is represented within a containment structure created using instances of the `TASK_GROUP` type, which has three key attributes. Execution of a Group is controlled by the `_execution_type_` and `_execution_rules_` attributes, which express sequential or parallel processing, and optionally other execution rules. It also has a `_training_level_` attribute which enables different visbility of Sub-Plans to users with different experience levels. This is described more fully below.
 
 [.tbd]
 TBD: other execution rules.
@@ -123,99 +130,127 @@ TBD: a single attribute may be sufficient.
 
 == Dispatchable Actions
 
+The type `DISPATCHABLE_ACTION` is the abstract parent of various Action subtypes that represent work requested to be done by some other agent, i.e. external to the current Task Plan. The general execution scheme for such Actions is as follows:
+
+* _dispatch_ the work request to a target actor or service;
+* _block or continue_, according to the `_wait_` flag, which determines switch or fork behaviour; and
+* process any _callback notification_, specified via the `_callback_` attribute.
+
+The following sub-sections described the various subtypes of `DISPATCHABLE_ACTION`, while callbacks are described in detail further down.
+
 === Hand-offs and Coordinated Teamwork
 
-The second kind of Work Plan containing multiple Task Plans corresponds to a team work situation, where each Task Plan has a distinct principal performer, normally defined in terms of role and/or function, e.g. 'chemotherapy nurse' + 'assistant'.
-
-Performing teamwork in a coordinated fashion with task planning support necessarily requires multiple Task Plans - one for each actor, and a means of coordination among them. This is achieved by the use of `HAND_OFF` class and the attributes inherited from `DISPATCHABLE_ACTION`, i.e. `_wait_`, which determines switch or fork behaviour, and `_xxx_action_` attributes, which determine what to do depending on whether the requested work fails, succeeds or times out, for situations where the `_wait_` flag was set to `True`. 
+Work Plans may be designed to contain multiple Task Plans, each corresponding to a team worker. In the execution of such a Work Plan, the performer of any Task Plan may at some point need to hand off to another performer, i.e. one of the other Task Plans in the same Work Plan. As described above, the original worker may wait or continue, and in both cases, receipt of a callback notification from the other Task Plan may cause a change in the execution path of the first Plan.
 
 The following illustrates, using the example of an acute stroke management care process.
 
 [.text-center]
 .Task coordination
-image::diagrams/task_coordination.svg[id=task_coordination, align="center", width=75%]
+image::diagrams/task_coordination.svg[id=task_coordination, align="center", width=60%]
 
-In this Work Plan, three Task Plans are used to perform (parts of) the clinical work coordinated for managing an acute stroke, as per a Care Pathway. There are two Hand-offs, the first synchronous (`_wait_` = `True`; `_resume_task_` = `next`) and the second an asynchronous fork (`_wait_` = `False`).
+In this Work Plan, three Task Plans are used to perform (parts of) the clinical work coordinated for managing an acute stroke, as per a Care Pathway. There are two Hand-offs, the first synchronous (`_wait_` = `True`; callback listener resumes at the next Task) and the second an asynchronous fork (`_wait_` = `False`).
 
 === External Request
 
-The Task sub-type `EXTERNAL_REQUEST` represents a request by the current performer to an external entity outside of the current Plan computation context to perform some work on behalf of the performer. This is normally an organisation of which routine requests can be made. The request is defined in terms of an organisation identifier, a request identifier (i.e. a name or type of job) and a list of other details, represented by the standard archetypable `ITEM_STRUCTURE`.
-
-Since an External Request represents a context change, the `EXTERNAL_REQUEST` class inherits from `DISPATCHABLE_ACTION`, which enables a switch or fork to be specified, and in the case of a switch, how to process the return of control or a timeout.
+The Task sub-type `EXTERNAL_REQUEST` represents a request by the current performer to an external entity completely outside of the current Work Plan computation context to perform some work on behalf of the performer. This is normally an organisation of which routine requests can be made (e.g. pathology laboratory). The request is defined in terms of an organisation identifier, a request identifier (i.e. a name or type of job) and a list of other details, represented by the standard archetypable `ITEM_STRUCTURE`.
 
 === System Request
 
-In a similar way to External Request, the `SYSTEM_REQUEST` Task sub-type represents a request to a system with a computational interface on behalf of the performer. This might be to a special logging facility or a decision support system for example. The request is modelled in terms of a `SYSTEM_CALL` instance. It also inherits from `DISPATCHABLE` to enable context change handling.
+In a similar way to External Request, the `SYSTEM_REQUEST` Task sub-type represents a request to a _system_ with a computational interface on behalf of the performer, such as a logging facility or a decision support system. The request is defined in terms of a `SYSTEM_CALL` instance.
 
 == Conditional Structures
 
-More advanced applications of Task Plans include two common conditional structures. The first is the decision structure in which Tasks are executed conditionally according to logic statements included in the Plan, equivalent to an if/then/else structure or case statement in a programming language. The second is the wait state in which multiple branches correspond to the receipt of different events. This is equivalent to a when/then/else/then rules structure attached to a wait loop.
+More advanced applications of Task Plans include three common conditional structures, which may be considered as specific patterns based on the core classes. They are expressed in terms of descendants of `TASK_GROUP` and are illustrated in the following UML model.
 
 [.text-center]
 .proc.task_planning package definition model (decision view)
 image::{uml_export_dir}/diagrams/PROC-task_planning.definition-decision.svg[id=proc_task_planning_definition_decision, align="center"]
 
-In this model, both structures are treated as a kind of special pattern of Task Groups and preconditions. A decision structure is thus represented by the classes `DECISION_GROUP` and `DECISION_BRANCH`, which are specialised descendants of `TASK_GROUP`. A `DECISION_GROUP` may only contain `DECISION_BRANCH` members, and each `DECISION_BRANCH` has its precondition limited to a state expression, whose value is evaluated when the decision structure is encountered. 
+The first pattern is a structure in which a set of Task Groups are treated as separate branches from a common point in the Plan. Each branch is entered conditionally according to the Boolean expression included on the branch. The classes `CONDITION_GROUP` and `CONDITION_BRANCH` provide this structure, which is  equivalent to an if/then/else structure in a programming language. Semantically, the branches are evaluated in order, in the matter of an if/then/else structure, and the final member may be a catch-all branch that matches if nothing else does. Accordingly, the `_execution_type_` is constrained to `sequential`.
+
+The following diagram shows a typical condition structure.
+
+[.text-center]
+.Condition structure
+image::diagrams/condition_structure.svg[id=condition_structure, align="center", width=40%]
+
+The second structure corresponds to a decision point in a workflow at which some expression is evaluated, and each outgoing branch corresponds to a sub-range of the expression's value range. The classes `DECISION_GROUP` and `DECISION_BRANCH` provide this structure, which is  equivalent to a switch statement in a programming language. The branch sub-ranges should be individually mutually exclusive, and collectively they should cover the entire value range of the expression. If these criteria are not met, the Decision Group may not be decidable, e.g. if the tested variable is outside the range of every branch. There is no implied ordering of processing the branches, so `_execution_type_` is constrained to `parallel`.
 
 The following diagram shows a typical decision structure.
 
 [.text-center]
 .Decision structure
-image::diagrams/decision_structure.svg[id=decision_structure, align="center", width=50%]
+image::diagrams/decision_structure.svg[id=decision_structure, align="center", width=40%]
 
-A decision point is represented by a `DECISION_GROUP` instance, which logically contains two or more alternative branches, each represented by a `DECISION_BRANCH` instance with its `_precondition_` set to a Boolean-valued expression. By this method, the Plan execution engine can determine which group to execute based on the runtime value of the variable.
-
-Although the model leaves the exact nature of the Decision Branch preconditions open, good design would normally dictate that the set of preconditions attached to the set of branches under a Decision Group should:
-
-* reference the same variable or expression;
-* match mutually exclusive sub-ranges;
-* taken together, cover the entire range of the variable.
-
-The preconditions in the example above illustrate these principles: the two expressions `$var_1 < 5` and `$var_1 >= 5` both reference `$var_1`, are mutually exclusive sub-ranges, and together, cover the total range of the variable.
-
-If these guidelines are not followed, the Decision Group may not be decidable, e.g. if the tested variable is outside the range of every branch.
+The third structure is a wait state at which multiple branches correspond to the receipt of different events. Taken together, the events constitute a set of logical alternatives at the relevant point in the Plan. This structure is modelled using the classes `EVENT_GROUP` and `EVENT_BRANCH`, and is equivalent to a when/then/else/then rules structure in a rule-based programming environment.
 
 [.tbd]
-TBD: potentially add in a special branch that acts like the else on a case statement?
-
-Event structures are structurally similar, but have different execution-time semantics, because they involve a wait state.
+TODO: diagram.
 
 == Detailed Plan Semantics
 
-=== Events and Timing
+=== Events
 
-xxxx
+Work plans inevitably interact with events in the external world, as well being driven by time. In this model, points in time are modelled in terms of Events that represent the _reaching_ of certain points in time or an entry in a calendar, as time passes. Consequently, specifying a time for a Task to be performed and waiting for certain Events before it can be performed are both specified in the latter form. The relevant part of the model, shown below, consists of various types of Events, and additionally, various types of _listeners_ that may be used to react to them.
 
 [.text-center]
-.proc.task_planning model - events and timing
+.proc.task_planning model - Events
 image::{uml_export_dir}/diagrams/PROC-task_planning.definition-event.svg[id=proc_task_planning_definition_event, align="center"]
 
-xxx
+In the above, the `PLAN_EVENT` class is sub-typed to represent two categories of events: _deterministic events_, i.e. known, system-endogenous events, and _non-deterministic events_, i.e. events from the outside world whose receipt is not guaranteed.
 
-=== Timing
+Three deterministic event types are included as follows:
 
-In the coordinated team work situation, the timing of Tasks tends to be based on previous Tasks completing and/or receipt of completion notifications from Tasks being performed by other actors. However, for scenarios such as routine drug administration, the timing of Tasks can be specified directly. 
+* `TIMER_EXPIRY`: represents the expiry of a Timer that was launched at some earlier time;
+* `TIMELINE_MOMENT`: represents a time-point within the global Plan timeline that is specified _relative_ to the Plan's start time, and converted to absolute time at activation;
+* `CALENDAR_EVENT`: represents an event in the global Plan calendar, which is specified in absolute time.
 
-This is achieved via the `_execution_time_` attribute, whose value at runtime is understood as a guide, enabling Tasks to be placed on a scheduled timeline. A performer may execute the Task earlier or later than the indicated time, with the final `ACTION` or other Entry recording the actual time.
+The non-deterministic event types are as follows:
 
-The timing of a Task, may be expressed in three different ways, as follows:
+* `TASK_TRANSITION`: an event corresponding to a lifecycle transition of a Task, such as being cancelled or done;
+* `CALLBACK_NOTIFICATION`: a callback notification connected to a dispatch call for a Dispatchable Task (Hand-off, External Request, System Request);
+* `STATE_TRIGGER`: an event generated by a change in a tracked variable, or an expression based on tracked variables, e.g. a value reaching a threshold;
+* `MANUAL_EVENT`: an event that is manually signalled to the Plan execution engine by a user.
 
-* _clock time_: the Task is to be executed at a specific clock time represented by an instance of `CLOCK_TIMING`; within a Task definition, this must be specified as a relative duration with respect to the origin clock time of the Task Plan, which is only known in absolute terms at execution time;
-* _event-linked time_: the Task is to be executed at a time related to a real world event, such as a meal or sleeping; in this case, an instance of `EVENT_LINKED_TIME` is used; the attributes indicate the specifics such as '1 hour before', 'with meal' etc;
-* _task-link time_: the Task is to be executed at a time related to the timing of another Task event, such as completion of the previous Task; this is represented by an instance of `TASK_LINKED_TIME`, whose attributes define the specifics;
-* _state-linked time_: the Task is to be executed at a time related to the state of the subject, as specified by an instance of `STATE_LINKED_TIMING`. This uses a Boolean-valued `_condition_` attribute to state a condition which when true indicates that a Task time-to-execute has been reached. The `_test_period_` attribute indicates when to retest the condition.
+Instances of all of these types, on their own only identify the type and source of an event. To intercept events and subsequently perform actions requires an `EVENT_LISTENER`, which is a generic class from which any concrete type may be constructed based on the type of Event to be listened for. Types such as `EVENT_LISTENER <MANUAL_EVENT>` may thus be constructed. The `EVENT_LISTENER` class has a `_success_action_` attribute of type `EVENT_ACTION`, which enables any of the following actions to occur on receipt of an event:
 
-TODO: add a max time or time-out.
+* making system calls, if the `_system_call_` attribute is set, e.g. to cause a notification to be sent or write to a system logger;
+* displaying a message to the user, specified in the `_message_` attribute;
+* starting a named Timer (`_timer_` attribute).
 
-Each of these timing specification types inherits from the `TIMING_SPEC` class, which provides an optional `_start_window_` attribute, enabling any time to be specified with an additional 'within x time'.
+A more specialised kind of Listener is `ND_EVENT_LISTENER`, which is based on the generic type `EVENT_LISTENER <NON_DETERMINISTIC_EVENT>`, adds a `_timeout_`, which enables a `TASK_TIMER` to be launched, which in turn will result in a `TIMER_EXPIRY` event for which a another `EVENT_LISTENER` may be configured. This would normally only be applied to non-deterministic events, ensuring that non-arrival does not block Plan execution.
 
-If no `_execution_time_` is specified, a Task is assumed to be available for execution if other (non-temporal) availability conditions are met and:
+A further specialisation of `ND_EVENT_LISTENER` is `CALLBACK_LISTENER`, which adds three attributes:
 
-* for Tasks in a sequential group, as soon as the previous Task has been completed;
-* for Tasks in a parallel group, as soon as the group becomes available.
+* `_fail_action_`: enables a different Action to be specified on receipt of a callback with a 'fail' status;
+* `_resume_type_` and `_resume_location_`: these enable resumption of processing at a different location in the Plan, e.g. an earlier Task that may need to be redone.
+
+=== Specifying Task Timing
+
+Time is manifested in the model in a number of ways. Firstly, there are three kinds of events that encode time directly, as described above. Of these, the `TIMELINE_MOMENT` type corresponds to what is normally understood as 'clock time' or 'diary' time in the sense of a modern calendar or diary tool. This concept is called the _timeline_ here to distinguish it from the global Plan _calendar_, which contains events already fixed in time, e.g. appointments made by other systems, holidays etc. 
+
+Any Plan Item (i.e. `TASK`, `TASK_GROUP` or descendant) may specify timing via its `_wait_spec_` attribute, which refers to an instance of `TASK_WAIT`. The `TASK_WAIT` class models a wait state, and defines how to specify the details of when a Task should start with respect to any of the Event types described above. Its `_events_` attribute enables more than multiple Events to be used as a trigger, with an assumed logical OR relation among the Events. This enables the specification of triggers such as 'at 8pm on day 1, or when oxygen saturation drops below 90% (whichever comes first)'. The `_event_relation_` attribute allows the Task to be specified as commencing `before`, `with` or `after` the trigger event (such as a meal). The `_start_window_` attribute allows for a delay from the trigger moment, and  `_timeout_`, if set, will cause a Timer to be started in cases where Event receipt is not certain.
+
+The combined structure of a `TASK_WAIT` and one or more `PLAN_EVENT` descendants provides a way to specify _when_ a Task may be commenced, either in terms of time-related events, or non-deterministic events, as follows:
+
+* _clock time_: the Task is to be executed at a specific clock time represented by an instance of `TIMELINE_MOMENT`; within a Task definition, this must be specified as a relative duration with respect to the origin clock time of the Task Plan, which is only known in absolute terms at execution time;
+* _event-linked time_: the Task is to be executed at a time related to a real world event, such as a meal or sleeping; in this case, an instance of `CALENDAR_EVENT` or `MANUAL_EVENT` is used; the `TASK_WAIT` attributes indicate the specifics such as '1 hour before', 'with meal' etc;
+* _task-linked time_: the Task is to be executed at a time related to the timing of another Task lifecycle transition, such as completion of the previous Task; this is represented by an instance of `TASK_TRANSITION` whose `_transition_` indicates the required lifecycle transition;
+* _state-linked time_: the Task is to be executed at a time related to the state of the subject, as specified by an instance of `STATE_TRIGGER`. This uses a Boolean-valued `_expression_` attribute to state a condition which when true indicates that a Task time-to-execute has been reached.
+
+The `TIMELINE_MOMENT` type allows a point in time relative to the start of the Plan to be specified, in terms of fixed and variable components. The variable part is understood as an offset from the Plan zero point at activation, while the fixed part enables fixed points in time such as a particular hour or day to be specified. A combination of the two such as +1d, 01:30:00 can thus be used to state a time like '1:30 PM on day one of the plan'.
+
+=== Timers
+
+The type `TIMER_EXPIRY` corresponds to the expiry of a Timer that has been launched at some earlier point in time. `TIMER` and `TIMER_EXPIRY` instances thus occur in pairs.
+
+
+=== Callbacks
+
+Using the above scheme, system callbacks can be conveniently represented with a `CALLBACK_LISTENER`.
 
 [.tbd]
-ISSUE-time-relativity: time is somewhat complicated. In a TASK_PLAN archetype we need to use relative offsets everywhere, but at runtime, we need absolute times. We could consider setting an 'origin time' for the Task Plan as a whole when it is instantiated, and computing absolute times for each Task at that point. However, at runtime, the timings may be changed by the performer (e.g. times to admin drugs) and the intention is probably to make them 'stick', even if the notional origin time is moved. However in other cases, the idea may be to move the origin and have all the times move.
+TODO
 
 === Repetition
 
@@ -292,7 +327,7 @@ include::{uml_export_dir}/classes/execution_rule.adoc[]
 
 include::{uml_export_dir}/classes/task.adoc[]
 
-include::{uml_export_dir}/classes/wait_condition.adoc[]
+include::{uml_export_dir}/classes/task_wait.adoc[]
 
 include::{uml_export_dir}/classes/task_repeat.adoc[]
 
@@ -322,7 +357,6 @@ include::{uml_export_dir}/classes/external_request.adoc[]
 
 include::{uml_export_dir}/classes/system_request.adoc[]
 
-
 include::{uml_export_dir}/classes/linked_plan.adoc[]
 
 
@@ -339,11 +373,7 @@ include::{uml_export_dir}/classes/event_group.adoc[]
 include::{uml_export_dir}/classes/event_branch.adoc[]
 
 
-include::{uml_export_dir}/classes/timing_spec.adoc[]
-
-include::{uml_export_dir}/classes/event_spec.adoc[]
-
-include::{uml_export_dir}/classes/event_wait.adoc[]
+include::{uml_export_dir}/classes/plan_event.adoc[]
 
 include::{uml_export_dir}/classes/event_action.adoc[]
 
@@ -351,7 +381,7 @@ include::{uml_export_dir}/classes/non_deterministic_event.adoc[]
 
 include::{uml_export_dir}/classes/manual_event.adoc[]
 
-include::{uml_export_dir}/classes/callback_event.adoc[]
+include::{uml_export_dir}/classes/callback_notification.adoc[]
 
 include::{uml_export_dir}/classes/state_trigger.adoc[]
 
@@ -361,4 +391,14 @@ include::{uml_export_dir}/classes/timer_expiry.adoc[]
 
 include::{uml_export_dir}/classes/calendar_event.adoc[]
 
+include::{uml_export_dir}/classes/timeline_moment.adoc[]
+
 include::{uml_export_dir}/classes/task_timer.adoc[]
+
+include::{uml_export_dir}/classes/event_listener.adoc[]
+
+include::{uml_export_dir}/classes/nd_event_listener.adoc[]
+
+include::{uml_export_dir}/classes/callback_listener.adoc[]
+
+include::{uml_export_dir}/classes/event_action.adoc[]
